--- a/src/main/resources/static/html/CreateTicket.html
+++ b/src/main/resources/static/html/CreateTicket.html
@@ -13,8 +13,8 @@
         <input type="text" id="title" name="title"><br>
         <label for="description">Ticket description: </label>
         <input type="text" id="description" name="description"><br>
-        <label for="trainee">Created by: </label>
-        <input type="text" id="trainee" name="trainee"><br>
+        <label for="topic">Topic: </label>
+        <input type="text" id="topic" name="topic"><br>
         <input type="submit" onclick="createTicket()" value="Create Ticket">
     </form>
 </body>
